first custom func / no vertico

--- a/config.org
+++ b/config.org
@@ -161,17 +161,6 @@
 (which-key-mode)
 #+end_src
 
-** Vertico
-
-#+begin_src elisp
-(use-package vertico
-  :ensure t
-  :init
-  (vertico-mode)
-  ;; Optionally enable cycling for `vertico-next' and `vertico-previous'.
-  (setq vertico-cycle t))
-#+end_src
-
 ** V Terminal
 
 #+begin_src elisp
@@ -428,8 +417,15 @@
 - helm is a fuzzy finder for emacs
 #+begin_src elisp
 (use-package helm-lsp :ensure t)
-(use-package helm :ensure t
-  :config (helm-mode)(require 'helm-config))
+(use-package helm
+  ;; recommended to use straight
+  :straight t 				 
+  :bind
+  (("M-x" . helm-M-x))
+  (("C-x C-f" . helm-find-files))
+  :config
+  (helm-mode 1)
+  (require 'helm-config))
 #+end_src
 *** Haskell
 
@@ -901,7 +897,7 @@
 - *keymaps using General plugin*
 - these are non-package related key maps 
 #+begin_src elisp
-(nvmap :states 'normal :keymaps 'override :prefix "SPC"
+(general-def :states 'normal :keymaps 'override :prefix "SPC"
   "a"     '(org-agenda :which-key "org-agenda")
   "c c"   '(compile :which-key "Compile")
   "c C"   '(recompile :which-key "Recompile")
@@ -916,7 +912,7 @@
   ;; buffers
   "b"     '(switch-to-buffer :which-key "switch to buffer")
   ;; File manipulation
-  "."     '(find-file :which-key "Find file")
+  "."     '(helm-find-files :which-key "Find file")
   "f s"   '(save-buffer :which-key "Save file")
   "f C"   '(copy-file :which-key "Copy file")
   "f D"   '(delete-file :which-key "Delete file")
@@ -931,9 +927,23 @@
 - making vim like remaps 
 #+begin_src elisp
 ;; better yanking 
-(define-key evil-normal-state-map
-            (kbd "Y")
-            (kbd "y$"))
+(general-nmap "Y" (kbd "y$"))
+
+;; better searching
+;; centers each result
+(general-nmap "n" 'search-next-center-evil)
+(defun search-next-center-evil () 
+  (interactive)
+    (evil-search-next)
+    (evil-scroll-line-to-center
+      (line-number-at-pos (point))))
+
+(general-nmap "N" 'search-prev-center-evil)
+(defun search-prev-center-evil () 
+  (interactive)
+    (evil-search-previous)
+    (evil-scroll-line-to-center
+      (line-number-at-pos (point))))
 #+end_src
 
 ** zooming
