--- a/config.org
+++ b/config.org
@@ -579,6 +579,9 @@
 
 (eval-after-load "web-mode"
   '(setq web-mode-enable-auto-expanding t))
+
+;; allows for org block highlighting
+(use-package svelte-mode :ensure t)
 #+end_src
 *** Python
 - uses lsp-pyright with the open source pyright server. Using this because it can be used with nvim /emacs.
