--- a/config.org
+++ b/config.org
@@ -422,6 +422,7 @@
 (add-hook 'clojure-mode-hook #'rainbow-delimiters-mode)
 (add-hook 'web-mode-hook #'rainbow-delimiters-mode)
 (add-hook 'go-mode-hook #'rainbow-delimiters-mode)
+(add-hook 'js-mode-hook #'rainbow-delimiters-mode)
 (add-hook 'typescript-mode-hook #'rainbow-delimiters-mode)
 (add-hook 'python-mode-hook #'rainbow-delimiters-mode)
 (use-package aggressive-indent :ensure t)
@@ -443,6 +444,11 @@
   :config
   (helm-mode 1)
   (require 'helm-config))
+#+end_src
+*** lua
+- use neovim for lua but for notes i use emacs
+#+begin_src elisp
+(use-package lua-mode :ensure t)
 #+end_src
 *** Flutter/ dart
 - flutter & dart support
@@ -593,7 +599,7 @@
   | M-.     | xref-find-definitions |
   | M-?     | xref-find-references  |
   | M-,     | xref-pop-marker-stack |
-**** Lisp 
+**** Lisp & scheme
 - using the sbcl version of common lisp with slime mode
 - org babel enabled 
 #+begin_src elisp
@@ -604,6 +610,21 @@
  :keymaps 'lisp-mode-map
  :prefix "C-c"
  "C-z" '(slime :which-key "slime"))
+#+end_src
+- using geiser for guile scheme
+#+begin_src elisp
+(use-package geiser-guile :ensure t)
+(general-define-key
+ :states '(normal)
+ :keymaps 'geiser-mode-map
+ :prefix "SPC"
+ "l f" '(geiser-load-file :which-key "load file")
+ "\\" '(geiser-insert-lambda :which-key "insert lambda"))
+(general-define-key
+ :states '(visual)
+ :keymaps 'geiser-mode-map
+ :prefix "SPC"
+ "r" '(geiser-eval-region :which-key "eval region"))
 #+end_src
 **** Clojure
 #+begin_src elisp
