--- a/config.org
+++ b/config.org
@@ -425,11 +425,13 @@
 (add-hook 'js-mode-hook #'rainbow-delimiters-mode)
 (add-hook 'typescript-mode-hook #'rainbow-delimiters-mode)
 (add-hook 'python-mode-hook #'rainbow-delimiters-mode)
+(add-hook 'geiser-mode-hook #'rainbow-delimiters-mode)
 (use-package aggressive-indent :ensure t)
 (add-hook 'racket-mode-hook #'aggressive-indent-mode)
 (add-hook 'emacs-lisp-mode-hook #'aggressive-indent-mode)
 (add-hook 'clojure-mode-hook #'aggressive-indent-mode)
 (add-hook 'web-mode-hook #'aggressive-indent-mode)
+(add-hook 'geiser-mode-hook #'rainbow-delimiters-mode)
 #+end_src
 *** Helm
 - helm is a fuzzy finder for emacs
@@ -495,6 +497,11 @@
   (add-hook 'before-save-hook #'lsp-format-buffer t t)
   (add-hook 'before-save-hook #'lsp-organize-imports t t))
 (add-hook 'go-mode-hook #'lsp-go-install-save-hooks)
+#+end_src
+*** Julia
+- essentially a newer version of python. Like it for data science as it's *jit* compiled and all packages are written just in julia.
+#+begin_src elisp
+(use-package julia-mode :ensure t)
 #+end_src
 *** Web Languages (JS, TS, Svelte)
 - *REST client* in emacs
