--- a/config.org
+++ b/config.org
@@ -336,7 +336,7 @@
   ;; golang
   (go-mode . lsp-deferred)
   ;; rust
-  (rust-mode . lsp-defered)
+  (rust-mode . lsp-deferred)
   ;; svelte 
   (web-mode . lsp-deferred)
   :commands (lsp lsp-deferred)
