--- a/config.org
+++ b/config.org
@@ -511,6 +511,7 @@
 	  (lambda () (setq indent-tabs-mode nil)))
 (setq rust-format-on-save t)
 (use-package cargo-mode :ensure t)
+(use-package ob-rust :ensure t)
 #+end_src
 *** Julia
 - essentially a newer version of python. Like it for data science as it's *jit* compiled and all packages are written just in julia.
@@ -866,11 +867,14 @@
 #+begin_src elisp
 (org-babel-do-load-languages
  'org-babel-load-languages
- '((scheme . t)
-   (lisp . t)
+ '(
    (js . t)
+   (lisp . t)
+   (python . t)
    (racket . t)
-   (python . t)))
+   (rust . t)
+   (scheme . t)
+))
 ;; basic conf
 (push '("conf-unix" . conf-unix) org-src-lang-modes)
 #+end_src
