--- a/config.org
+++ b/config.org
@@ -494,6 +494,7 @@
 - Getting go-mode installed
 #+begin_src elisp
 (use-package go-mode :ensure t)
+(use-package ob-go :ensure t)
 #+end_src
 
 - some settings promoted by go, allows for auto-formatting on save
@@ -867,14 +868,13 @@
 #+begin_src elisp
 (org-babel-do-load-languages
  'org-babel-load-languages
- '(
+ '((go .t)
    (js . t)
    (lisp . t)
    (python . t)
    (racket . t)
    (rust . t)
-   (scheme . t)
-))
+   (scheme . t)))
 ;; basic conf
 (push '("conf-unix" . conf-unix) org-src-lang-modes)
 #+end_src
@@ -886,7 +886,7 @@
 (set-face-attribute
  'org-block nil
  :foreground nil
- :background "#282828"
+ :background "#191a21"
  :inherit '(fixed-pitch))
 ;; code
 (set-face-attribute 'org-code nil
