--- a/config.org
+++ b/config.org
@@ -238,7 +238,7 @@
 (add-hook 'go-mode-hook #'tree-sitter-hl-mode)
 (add-hook 'go-mode-hook #'smartparens-mode)
 
-;; ----- HTML
+;; ----- HTML / Vue
 ;; use C-j to expand
 (use-package emmet-mode
   :ensure t
@@ -248,6 +248,7 @@
 (use-package web-mode
   :ensure t
   :config
+  (add-to-list 'auto-mode-alist '("\\.vue\\'" . web-mode))
   (add-to-list 'auto-mode-alist '("\\.html?\\'" . web-mode)))
 
 ;; ----- JS
@@ -262,6 +263,10 @@
   :ensure t)
 ;; org src support
 (use-package ob-rust
+  :ensure t)
+
+;; ----- Svelte
+(use-package svelte-mode
   :ensure t)
 
 ;; lang specific hooks
@@ -309,6 +314,7 @@
  "b s" '(switch-to-buffer :which-key "switch to buffer")
  "b k" '(kill-buffer-and-window :which-key "kill buffer and window")
  "b K" '(kill-some-buffers :which-key "kill some buffers")
+ "b t" '(tear-off-window :which-key "tear off window")
  ;; compiling
  "c c" '(compile :which-key "compile")
  ;; Helm 
@@ -405,4 +411,42 @@
  :prefix "SPC"
  "v" '(vterm-other-window :which-key "vterm-other-window"))
 #+end_src
-
+* Notes
+** Setting up note class
+#+begin_src elisp
+;; ----- Latex Export
+(require 'ox-latex)
+(setq org-latex-classes nil)
+;; custom function to export to pdf without TOC
+(defun no-toc-org-export-to-latex ()
+  (interactive)
+  (progn
+    (setq org-export-with-toc nil)
+    (org-latex-export-to-pdf)
+    (setq org-export-with-toc t)))
+;; create custom note class
+(add-to-list 'org-latex-classes
+	     ;; elegantnote should come with latex
+          '("note"
+	    "\\documentclass[en]{elegantnote} \\usepackage{minted}"
+             ("\\section{%s}" . "\\section*{%s}")
+             ("\\subsection{%s}" . "\\subsection*{%s}")
+             ("\\subsubsection{%s}" . "\\subsubsection*{%s}")
+             ("\\paragraph{%s}" . "\\paragraph*{%s}")
+             ("\\subparagraph{%s}" . "\\subparagraph*{%s}")))
+#+end_src
+** setting up minted
+#+begin_src elisp
+;; set minted as default
+(setq org-latex-listings 'minted)
+;; style settings
+(setq org-latex-minted-options
+      '(("fontsize" "\\small")("frame" "lines")
+	("breaklines" "true")
+	("linenos" "true")
+	("breakanywhere" "true")
+	("bgcolor" "yellow!5")))
+;; need -shell-escape for minted
+(setq org-latex-pdf-process
+      '("latexmk -pdflatex='%latex -shell-escape -interaction nonstopmode' -pdf -output-directory=%o -f %f"))
+#+end_src
