--- a/config.org
+++ b/config.org
@@ -468,13 +468,13 @@
 ;; create custom note class
 (add-to-list 'org-latex-classes
 	     ;; elegantnote should come with latex
-          '("note"
-	    "\\documentclass[en]{elegantnote} \\usepackage{minted}"
-             ("\\section{%s}" . "\\section*{%s}")
-             ("\\subsection{%s}" . "\\subsection*{%s}")
-             ("\\subsubsection{%s}" . "\\subsubsection*{%s}")
-             ("\\paragraph{%s}" . "\\paragraph*{%s}")
-             ("\\subparagraph{%s}" . "\\subparagraph*{%s}")))
+	     '("note"
+	       "\\documentclass[en]{elegantnote} \\usepackage{minted}"
+	       ("\\section{%s}" . "\\section*{%s}")
+	       ("\\subsection{%s}" . "\\subsection*{%s}")
+	       ("\\subsubsection{%s}" . "\\subsubsection*{%s}")
+	       ("\\paragraph{%s}" . "\\paragraph*{%s}")
+	       ("\\subparagraph{%s}" . "\\subparagraph*{%s}")))
 #+end_src
 ** setting up minted
 #+begin_src elisp
@@ -493,6 +493,7 @@
 #+end_src
 ** custom funcs 
 #+begin_src elisp
+;; fix exported names 
 (defun rename-pdf-note ()
   "Renames exported pdf's to something a bit more readable."
   (interactive)
